[package]
name = "rjudge_api"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = "1.6.3"
axum = { version = "0.7.5", features = ["macros"] }
piston_rs = { path = "../piston_rs" }
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
